--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,5 +1,5 @@
 .element__like {
-   margin: 0 20px 3px 0;
+   margin: 31px 20px 31px 0;
    background: url('../../../images/like.svg');
    width: 22px;
    height: 19px;
@@ -9,7 +9,7 @@
 }
 
 .element__like:hover {
-   opacity: 0.5;
+   opacity: 0.6;
    cursor: pointer;
    transition: 0.5s ease;
-}
+}  
