--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -3,7 +3,7 @@
    padding: 0;
    display: flex;
    width: 282px;
-   height: 361px;
+   /* height: 361px; */
    flex-direction: column;
    border-radius: 10px;
    overflow: hidden;
