--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,13 +4,19 @@
    margin: 0;
    width: 142px;
    height: 33px;
+   transition: 0.5s ease;
 }
 
 @media screen and (max-width: 885px) {
    .header__logo {
-      background-image: url('../../../images/Header-logoS.svg');
+      background-size: contain;
       margin-left: 27px;
       max-width: 104px;
       max-height: 25px;
    }
+}
+
+.header__logo:hover {
+   opacity: 0.6;
+   cursor: pointer;
 }
