--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,8 +8,7 @@
 
 @media screen and (max-width: 885px) {
    .header {
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
+      min-height: 56px;
+      margin: 28px auto 42px;
    }
 }
