--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-   font-family: 'Inter';
+   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
    background-color: #000000;
    max-width: 1280px;
    margin: 0 auto;
