--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,6 +1,10 @@
 .popup__save-button {
-   background: url('../../../images/SubmitButton.svg');
-   margin: 0 0 0 36px;
+   color: #FFFFFF;
+   background-color: #000000;
+   font-weight: 400;
+   font-size: 18px;
+   line-height: 22px;
+   margin: 0 36px 37px;
    padding: 0;
    max-width: 358px;
    min-height: 50px;
@@ -11,14 +15,15 @@
 
 @media (max-width: 885px) {
    .popup__save-button {
-      background: url('../../../images/SubmitButtonS.svg');
+      font-size: 14px;
+      line-height: 17px;
       max-width: 238px;
       min-height: 46px;
-      margin: 0 0 0 25px;
+      margin: 0 22px 25px;
    }
 }
 
 .popup__save-button:hover {
-   opacity: 0.5;
+   opacity: 0.6;
    cursor: pointer;
 }
