--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,5 +1,5 @@
 .popup__title {
-   padding: 34px 0 54px 36px;
+   padding: 34px 36px 54px;
    margin: 0;
    font-weight: 900;
    font-size: 24px;
@@ -8,7 +8,7 @@
 
 @media (max-width: 885px) {
    .popup__title {
-      padding: 25px 0 75px 22px;
+      padding: 25px 22px 75px;
       font-size: 18px;
       line-height: 22px;
    }
