--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,5 +7,8 @@
    bottom: 0;
    width: 100%;
    height: 100%;
-   background-color: rgba(0, 0, 0, 0.473);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-color: rgba(0, 0, 0, 0.5);
 }
