--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -3,22 +3,22 @@
    padding: 0;
    width: 150px;
    height: 50px;
-   background: url('../../../images/Add-ButtonL.svg');
-   border: none;
-   position: absolute;
-   right: 0;
-}
-
-.profile__add-button:hover {
-   opacity: 0.5;
-   cursor: pointer;
+   background: url('../../../images/Add-Button.svg');
+   border: 2px solid #FFFFFF;
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: 22px 22px;
 }
 
 @media screen and (max-width: 885px) {
    .profile__add-button {
-
-      background: url('../../../images/Add-ButtonS.svg');
-      position: static;
       width: 282px;
+      background-size: 150px 50px;
+      background-size: 16px 16px;
    }
+}
+
+.profile__add-button:hover {
+   opacity: 0.6;
+   cursor: pointer;
 }
