--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -9,6 +9,7 @@
    background-size: cover;
    border: none;
    cursor: pointer;
+   align-self: end;
 }
 
 .profile__button-edit:hover {
@@ -17,7 +18,7 @@
 
 @media screen and (max-width: 885px) {
    .profile__button-edit {
-      margin: 0 0 1px 10px;
+      margin: 0 0 5px 10px;
       width: 18px;
       height: 18px;
    }
