--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,7 +4,7 @@
    padding: 0;
    display: flex;
    align-items: center;
-   position: relative;
+   justify-content: space-between;
 }
 
 @media screen and (max-width: 885px) {
