--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -8,7 +8,7 @@
    position: relative;
 }
 
-@media (max-width: 885px) {
+@media screen and (max-width: 885px) {
    .popup__container {
       max-width: 282px;
    }
