Работа исправлена на основании ревью

--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,5 +1,6 @@
 .header__logo {
    background-image: url('../../../images/Header-logo.svg');
+   background-repeat: no-repeat;
    padding: 0;
    margin: 0;
    width: 142px;
