--- a/blocks/element/__photo/element__photo.css
+++ b/blocks/element/__photo/element__photo.css
@@ -1,4 +1,8 @@
 .element__photo {
    margin: 0;
    padding: 0;
+   object-fit: cover;
+   width: 100%;
+   min-width: 282px;
+   height: 282px;
 }
