--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -11,4 +11,6 @@
    justify-content: center;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.5);
+   opacity: 0;
+   transition: opacity .4s linear, visibility .4s linear;
 }
