--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,5 +1,5 @@
 .popup__input {
-   margin: 0 36px 30px;
+   margin: 0 36px 5px;
    padding-bottom: 7px;
    min-width: 358px;
    border: none;
@@ -10,8 +10,8 @@
    line-height: 17px;
 }
 
-.popup__input:last-of-type {
-   margin-bottom: 45px;
+.popup__input:invalid {
+   border-bottom: solid 1px #ff0000;
 }
 
 @media (max-width: 885px) {
