В проектную работу были внесены корректировки на основании ревью

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,7 @@
 .popup__container {
    background-color: #FFF;
    max-width: 430px;
+   min-height: 350px;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
