--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -7,6 +7,12 @@
    font-weight: 400;
 }
 
+@media (max-width: 885px) {
+   .popup__input-error {
+      margin: 0 0 13px 22px;
+   }
+}
+
 .popup__input-error:last-of-type {
    margin-bottom: 31px;
 }
