--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -4,7 +4,7 @@
    font-weight: 400;
    font-size: 18px;
    line-height: 22px;
-   margin: 0 36px 37px;
+   margin: 0 36px 0;
    padding: 0;
    max-width: 358px;
    min-height: 50px;
