--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -1,4 +1,5 @@
 .popup__input-error {
+   min-height: 30px;
    margin: 0 0 13px 36px;
    padding: 0;
    color: red;
@@ -11,8 +12,4 @@
    .popup__input-error {
       margin: 0 0 13px 22px;
    }
-}
-
-.popup__input-error:last-of-type {
-   margin-bottom: 31px;
 }
