--- a/src/blocks/element/__like/element__like.css
+++ b/src/blocks/element/__like/element__like.css
@@ -1,5 +1,5 @@
 .element__like {
-   margin: 31px 20px 28px 0;
+   margin: 0 20px 0 0;
    background: url('../../../images/like.svg');
    width: 22px;
    height: 19px;
@@ -12,4 +12,4 @@
    opacity: 0.6;
    cursor: pointer;
    transition: 0.5s ease;
-}  
+}
