--- a/src/blocks/popup/__save-button/popup__save-button.css
+++ b/src/blocks/popup/__save-button/popup__save-button.css
@@ -6,7 +6,7 @@
    line-height: 22px;
    margin: 0 36px 35px;
    padding: 0;
-   max-width: 358px;
+   min-width: 358px;
    min-height: 50px;
    cursor: pointer;
    border-radius: 2px;
@@ -18,7 +18,7 @@
    .popup__save-button {
       font-size: 14px;
       line-height: 17px;
-      max-width: 238px;
+      min-width: 238px;
       min-height: 46px;
       margin: 0 22px 25px;
    }
