--- a/main.css
+++ b/main.css
@@ -19,7 +19,9 @@
 .element__delete-button{background:url(823b0cf1b0b7e9cb7cad.svg);border:none;cursor:pointer;height:19px;margin:0;outline:none;padding:0;position:absolute;right:20px;top:20px;width:18px}.element__delete-button:hover{cursor:pointer;opacity:.6;transition:.5s ease}
 .element__description{display:flex;justify-content:space-between;margin:0;padding:0}
 .element__title{color:#000;font-size:24px;font-weight:900;line-height:29px;margin:25px 15px 28px 21px;max-width:200px;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}
-.element__like{background:url(5126b6ad6039c01c21cb.svg);border:none;cursor:pointer;height:19px;margin:31px 20px 28px 0;outline:none;width:22px}.element__like:hover{cursor:pointer;opacity:.6;transition:.5s ease}
+.element__like-container{display:flex;flex-direction:column;justify-content:center;margin:0;padding:0}
+.element__like{background:url(5126b6ad6039c01c21cb.svg);border:none;cursor:pointer;height:19px;margin:0 20px 0 0;outline:none;width:22px}.element__like:hover{cursor:pointer;opacity:.6;transition:.5s ease}
+.element__like-value{color:#000;font-size:13px;line-height:16px;margin:3px 0 0 8px;min-height:16px}
 .element__like_active{background:url(fe17a515669479b1e649.svg)}
 .footer{margin:0 auto;max-width:880px;padding:0}
 .footer__copyright{color:#545454;font-size:18px;line-height:22px;margin:0;padding:0 0 60px}@media screen and (max-width:885px){.footer__copyright{font-size:14px;line-height:17px;margin-left:19px;padding-bottom:36px}}
