--- a/src/blocks/profile/__overlay-button/profile__overlay-button.css
+++ b/src/blocks/profile/__overlay-button/profile__overlay-button.css
@@ -1,6 +1,8 @@
 .profile__overlay-button {
    width: 120px;
    height: 120px;
+   margin: 0;
+   padding: 0;
    position: absolute;
    border-radius: 50%;
    top: 0;
@@ -17,10 +19,4 @@
 .profile__overlay-button:hover {
    opacity: 1;
    transition: 0.5s ease;
-}
-
-@media screen and (max-width: 787px) {
-   .profile__overlay-button {
-      margin: 0;
-   }
 }
